<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/icon_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/toolbar_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/toolbar_details" />

        <TextView
            android:id="@+id/tv_movie_original_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/toolbar_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_back"
            app:layout_constraintTop_toTopOf="@id/toolbar_details" />

        <ImageView
            android:id="@+id/iv_movie_background"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_details" />

        <View
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/transparent50"
            android:contentDescription="@null"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_details" />

        <ImageView
            android:id="@+id/iv_movie_img_detail"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_movie_background" />

        <ImageView
            android:id="@+id/image_star"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/ic_star_rate"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="@+id/iv_movie_background"
            app:layout_constraintEnd_toEndOf="@id/iv_movie_background" />

        <TextView
            android:id="@+id/tv_movie_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/transparent"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/image_star"
            app:layout_constraintEnd_toEndOf="@id/image_star"
            app:layout_constraintStart_toStartOf="@+id/image_star"
            app:layout_constraintTop_toTopOf="@+id/image_star" />

        <ImageButton
            android:id="@+id/image_favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            android:background="@drawable/ic_baseline_favorite_border"
            android:contentDescription="@string/make_favorite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_movie_background" />

        <TextView
            android:id="@+id/label_movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/overview"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/image_favorite" />

        <TextView
            android:id="@+id/tv_movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/label_movie_overview" />

        <TextView
            android:id="@+id/label_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/date"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/label_release_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/label_release_date"
            app:layout_constraintTop_toTopOf="@+id/label_release_date" />

        <TextView
            android:id="@+id/label_movie_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/trailers"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/label_release_date" />

        <LinearLayout
            android:id="@+id/view_error_trailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryLight"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/label_movie_trailers">

            <ImageView
                android:id="@+id/iv_error_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_baseline_error"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/tv_error_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/error_message_default"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_trailers"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/view_error_trailer" />

        <TextView
            android:id="@+id/label_movie_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/reviews"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/recycler_trailers" />

        <LinearLayout
            android:id="@+id/view_error_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimaryLight"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/label_movie_review">

            <ImageView
                android:id="@+id/iv_error_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_baseline_error"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/tv_error_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/error_message_default"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/view_error_review" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>